[AS7-809] Setup subsystems for the i18n logging framework.