@@ -44,10 +44,10 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                <showDeprecation>true</showDeprecation>
-                <compilerArguments>
-                    <endorseddirs>${project.build.directory}/endorsed</endorseddirs>
-                </compilerArguments>
+                    <showDeprecation>true</showDeprecation>
+                    <!-- Seems like a hacky way to pass multiple arguments, but it's the only way it worked. -->
+                    <fork>true</fork>
+                    <compilerArgument>-Djava.endorsed.dirs=${project.build.directory}/endorsed" "-AgeneratedTranslationFilesPath=${project.build.directory}/generated-translation-files</compilerArgument>
                 </configuration>
             </plugin>
 
@@ -124,6 +124,17 @@
        <artifactId>jbossws-api</artifactId>
     </dependency>
 
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging-processor</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     <dependency>
        <groupId>org.jboss.ws</groupId>
        <artifactId>jbossws-common</artifactId>
@@ -144,6 +155,6 @@
         <artifactId>jboss-as-subsystem-test</artifactId>
         <scope>test</scope>
     </dependency>
-  
+
  </dependencies>
 </project>
